<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login">
    <TextView
        android:id="@+id/textView2"
        android:layout_width="268dp"
        android:layout_height="60dp"
        android:layout_marginStart="61dp"
        android:layout_marginLeft="61dp"
        android:layout_marginTop="203dp"
        android:layout_marginEnd="82dp"
        android:layout_marginRight="82dp"
        android:layout_marginBottom="468dp"
        android:text="@string/login_heading"
        android:textColor="#7B1FA2"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="253dp"
        android:layout_height="44dp"
        android:layout_marginStart="42dp"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="81dp"
        android:layout_marginEnd="117dp"
        android:layout_marginRight="117dp"
        android:layout_marginBottom="343dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/example_email"
        android:textColor="#555353"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.627" />

    <Button
        android:id="@+id/login_submit"
        android:layout_width="119dp"
        android:layout_height="46dp"
        android:layout_marginStart="213dp"
        android:layout_marginLeft="213dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="154dp"
        android:layout_marginRight="154dp"
        android:layout_marginBottom="195dp"
        android:background="@color/purple_500"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pwd" />

    <EditText
        android:id="@+id/pwd"
        android:layout_width="253dp"
        android:layout_height="44dp"
        android:layout_marginStart="76dp"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="157dp"
        android:layout_marginRight="157dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/pwd"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/login_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="202dp"
        android:layout_height="41dp"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="137dp"
        android:layout_marginRight="137dp"
        android:layout_marginBottom="96dp"
        android:text="@string/newuser"
        android:textColor="#0E0E0E"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_submit" />

    <Button
        android:id="@+id/button_sign"
        android:layout_width="91dp"
        android:layout_height="37dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="47dp"
        android:layout_marginRight="47dp"
        android:layout_marginBottom="91dp"
        android:text="@string/sign"
        android:background="@color/purple_500"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/login_submit"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>