<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#c9f0ee">

    <TextView
        android:id="@+id/textView"
        android:layout_width="216dp"
        android:layout_height="64dp"
        android:layout_marginStart="163dp"
        android:layout_marginLeft="163dp"
        android:layout_marginTop="290dp"
        android:layout_marginEnd="191dp"
        android:layout_marginRight="191dp"
        android:layout_marginBottom="472dp"
        android:text="@string/hello"
        android:textColor="#7B1FA2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.415"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/sign"
        android:layout_width="108dp"
        android:layout_height="50dp"
        android:layout_marginStart="63dp"
        android:layout_marginLeft="63dp"
        android:layout_marginTop="81dp"
        android:layout_marginEnd="240dp"
        android:layout_marginRight="240dp"
        android:layout_marginBottom="296dp"
        android:background="@color/purple_500"
        android:text="@string/sign"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="184dp"
        android:layout_height="187dp"
        android:layout_marginStart="113dp"
        android:layout_marginLeft="113dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="114dp"
        android:layout_marginRight="114dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/med2" />

    <Button
        android:id="@+id/login"
        android:layout_width="108dp"
        android:layout_height="50dp"
        android:layout_marginTop="59dp"
        android:layout_marginBottom="270dp"
        android:text="@string/login"
        android:background="@color/purple_500"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sign"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


</androidx.constraintlayout.widget.ConstraintLayout>